# pm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_board.py  ai_client.py  board_store.py  config.py  dependencies.py  main.py  models.py
backend/app/routers/: ai.py  auth.py  board.py  health.py
backend/tests/: conftest.py  test_ai_board.py  test_ai_client.py  test_ai_live.py  test_ai_routes.py  test_app.py  test_auth.py  test_board_routes.py
docs/: AI_API.md  BOARD_API.md  DATABASE.md  PLAN.md  RUNNING.md  code_review.md
frontend/: AGENTS.md  package.json  playwright.config.ts
frontend/scripts/: start-integrated-server.mjs
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  KanbanApp.test.tsx  KanbanApp.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginForm.tsx
frontend/src/lib/: boardApi.ts
frontend/src/test/: boardFixtures.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
